--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roshanexpress",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A framework like express but more freindly",
   "license": "ISC",
   "author": "Reza Roshan",
@@ -13,7 +13,9 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build"
