--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "preserve",
     "target": "esnext",
     // For nodejs:
     "lib": ["esnext"],
@@ -18,6 +18,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "moduleResolution": "bundler",
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
