--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@types/busboy": "^1.5.4",
+    "busboy": "^1.6.0"
   }
 }
